--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#">MyApp</a>
+      <a class="navbar-brand" href="#">HW</a>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
@@ -38,5 +38,19 @@
         </form>
       </div>
     </nav>
+    <div class="jumbotron">
+        <h1 class="display-3">Hello, world!</h1>
+        <p class="lead">The zeitgeist contends that the literature would have us believe that a bearish bongo is not but a seashore. A deer is an afternoon from the right perspective. Recent controversy aside, a fowl is a replace's scarecrow. Their planet was, in this moment, a topmost pumpkin.</p>
+        <p>Want to know more? Join the mailing list!</p>
+        <form class="form-inline">
+          <label class="sr-only" for="email">E-Mail</label>
+          <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+            <div class="input-group-addon">@</div>
+            <input type="text" class="form-control" id="email" placeholder="E-Mail">
+          </div>
+
+          <button type="submit" class="btn btn-primary">Sign Up!</button>
+        </form>
+    </div>
   </body>
 </html>
