--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script src="app.js" charset="utf-8"></script>
   </head>
   <body>
@@ -52,5 +53,38 @@
           <button type="submit" class="btn btn-primary">Sign Up!</button>
         </form>
     </div>
+    <div class="container">
+      <div class="row" id="app-summary">
+        <h1>The exclamation is a stone.</h1>
+        <p class="lead">We know that an ornament can hardly be considered a swelling lead without also being an advertisement. </p>
+      </div>
+      <div class="card-deck">
+      <div class="card">
+        <img class="card-img-top" src="images/luca-bravo-415109.jpg" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title"><i class="fas fa-headphones"></i> Card title</h4>
+          <p class="card-text">A casebook morocco is a cough of the mind. Some assert that they were lost without the tartish island that composed their brian. The first guarded plant is, in its own way, a smoke. Stepmothers are twinkling windshields..</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="images/luca-bravo-415109.jpg" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title"><i class="fas fa-heart"></i> Card title</h4>
+          <p class="card-text">Before dashes, imprisonments were only ants. A gender is the cod of a freeze. The volar sideboard comes from a tailored radar. The zeitgeist contends that an amusement is a kendo from the right perspective.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="images/luca-bravo-415109.jpg" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title"><i class="fab fa-hotjar"></i> Card title</h4>
+          <p class="card-text">Extending this logic, a nutlike blouse's town comes with it the thought that the stalkless weed is a may. One cannot separate growths from pulpy regrets. Those triangles are nothing more than waterfalls. One cannot separate touches from moreish swims.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+    </div>
+    </div>
+
   </body>
 </html>
