--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
       </div>
     </div>
     </div>
-
+    <div class="row" id="download">
+      <h2>Download</h2>
+      <p class="lead container">Some posit the stubborn sense to be less than nipping.</p>
+     <span ><i class="fab fa-app-store-ios fa-9x"></i></span>
+    </div>
   </body>
 </html>
