--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#jumbotron">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#app-summary">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Download</a>
+            <a class="nav-link" href="#download">Download</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -39,7 +39,7 @@
         </form>
       </div>
     </nav>
-    <div class="jumbotron">
+    <div class="jumbotron" id="jumbotron">
         <h1 class="display-3">Hello, world!</h1>
         <p class="lead">The zeitgeist contends that the literature would have us believe that a bearish bongo is not but a seashore. A deer is an afternoon from the right perspective. Recent controversy aside, a fowl is a replace's scarecrow. Their planet was, in this moment, a topmost pumpkin.</p>
         <p>Want to know more? Join the mailing list!</p>
